feat(fiscal): melhorias finais NF-e 4.00, certificado A1 carregado, validação XML e ajustes em controllers/security